fix(alignment): aligned sorting buttons

--- a/src/components/layouts/FormOverviewLayout/FormOverviewLayout.css
+++ b/src/components/layouts/FormOverviewLayout/FormOverviewLayout.css
@@ -7,7 +7,7 @@
 .form-overview-form-section {
     width: 100%;
     max-width: 40rem;
-    margin: 1rem auto 0;
+    margin: 0 auto 1rem auto;
     height: 100vh;
     overflow: hidden;
 }
